--- a/app/src/main/res/layout/track_list_item.xml
+++ b/app/src/main/res/layout/track_list_item.xml
@@ -7,18 +7,18 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="108dp"
         android:id="@+id/cv"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="108dp"
             >
 
             <ImageView
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
+                android:layout_height="108dp"
+                android:layout_width="108dp"
                 android:id="@+id/album_thumbnail"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -28,14 +28,15 @@
                 />
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="54dp"
                 android:layout_height="match_parent"
                 android:id="@+id/playback_button"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:src="@drawable/play_circle"
                 android:contentDescription="@string/desc_playpreview"
-                />
+                android:clickable="true"
+                android:onClick="togglePlaybackPreview" />
 
             <TextView
                 android:layout_width="wrap_content"
