Refactored database and track list classes
Changed:
- Track data is now cached in database rather than loaded from spotify
servers each time app is opened. Greatly reduces loading time and allows
for offline use.
- Syncing with spotify can now be done by tapping a button on the main
screen
- Sync is performed automatically when app is opened for the very first
time
- SourceTrackData heavily refactored, is now a singleton and has new
methods for caching/loading track data
- DownloadTrackDataTask renamed to SyncTrackDataTask, also heavily
refactored to perform new syncing functionality
- Boolean change flags have been removed from Tags
- EditTagActivity no longer returns a result, changes are made directly
from the dialog
- TableRatings renamed to TableTracks, additional columns added
- Other minor tweaks to database table structure
- Database version is now stored in sharedprefs
- Some framework started for playlist generation, to be fully added in
next commit

--- a/app/src/main/res/layout/activity_edit_tags.xml
+++ b/app/src/main/res/layout/activity_edit_tags.xml
@@ -69,16 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/button_cancelchanges"
-            android:id="@+id/btnCancel"
-            android:layout_weight="1"
-            android:onClick="closeCancel" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/button_savechanges"
+            android:text="@string/button_continue"
             android:id="@+id/btnSave"
             android:layout_weight="1"
             android:onClick="closeSave" />
