--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,9 +9,58 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:id="@+id/cv3"
+        android:clickable="true"
+        android:onClick="startSync">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_vertical">
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView7"
+                android:src="@drawable/sync"
+                android:contentDescription="@string/desc_sync" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/txt_sync"
+                android:id="@+id/textView6"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_below="@+id/cv3"
+        android:id="@+id/space10" />
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:id="@+id/cv"
         android:clickable="true"
-        android:onClick="manageSavedTracks">
+        android:onClick="manageSavedTracks"
+        android:layout_below="@+id/space10">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -66,7 +115,9 @@
         android:layout_height="100dp"
         android:id="@+id/cv2"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/spacer2">
+        android:layout_below="@+id/spacer2"
+        android:clickable="true"
+        android:onClick="createNewPlaylist">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -131,5 +182,13 @@
         android:id="@+id/listView"
         android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true" />
+
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
