--- a/app/src/main/res/layout/playlist_criteria_item.xml
+++ b/app/src/main/res/layout/playlist_criteria_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_horizontal_margin">
+    android:padding="@dimen/activity_horizontal_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -97,7 +97,7 @@
         android:layout_below="@+id/spinComparator"
         android:layout_alignParentStart="true"
         android:minHeight="100dp"
-        android:id="@+id/linearLayout2">
+        android:id="@+id/layoutInput">
 
         <RatingBar
             android:layout_width="wrap_content"
@@ -138,15 +138,9 @@
             android:id="@+id/spinSelectMultiple"
             android:layout_gravity="center_horizontal"
             android:visibility="gone"
-            android:spinnerMode="dialog" />
+            android:spinnerMode="dialog"
+            android:clickable="false" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/txtboxContains"
-            android:inputType="text"
-            tools:ignore="LabelFor"
-            android:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
@@ -158,7 +152,7 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="false"
         android:id="@+id/linearLayout4"
-        android:layout_below="@+id/linearLayout2" >
+        android:layout_below="@+id/layoutInput" >
 
         <Button
             style="?android:attr/buttonBarButtonStyle"
