User interface tweaks and updates
Changed:
- Tested app on different display sizes, adjusted UI to be more
consistent and clean
- More consistent style/size of UI objects throughout app
- List of criteria in playlist generation dialog now uses custom adapter
& custom list items
- Other misc UI tweaks

--- a/app/src/main/res/layout/dialog_criteria_creation.xml
+++ b/app/src/main/res/layout/dialog_criteria_creation.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +14,7 @@
         android:orientation="horizontal">
 
         <Space
-            android:layout_width="10dp"
+            android:layout_width="5dp"
             android:layout_height="match_parent"
             android:id="@+id/space9"
             android:layout_weight="1" />
@@ -32,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/txt_include"
                 android:id="@+id/radioInclude"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:checked="true"
                 android:layout_weight="1" />
 
@@ -41,12 +40,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/txt_exclude"
                 android:id="@+id/radioExclude"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_weight="1" />
         </RadioGroup>
 
         <Space
-            android:layout_width="10dp"
+            android:layout_width="5dp"
             android:layout_height="match_parent"
             android:id="@+id/space5"
             android:layout_weight="1" />
@@ -54,14 +53,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/txt_allmatching"
             android:id="@+id/textView4"
             android:gravity="center"
             android:layout_weight="3" />
 
         <Space
-            android:layout_width="10dp"
+            android:layout_width="5dp"
             android:layout_height="match_parent"
             android:id="@+id/space8"
             android:layout_weight="1" />
@@ -78,14 +77,14 @@
 
     <Spinner
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:id="@+id/spinCriteria"
         android:layout_below="@+id/space6"
         android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:id="@+id/spinComparator"
         android:layout_below="@+id/spinCriteria"
         android:layout_alignParentStart="true" />
@@ -96,16 +95,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinComparator"
         android:layout_alignParentStart="true"
-        android:minHeight="100dp"
+        android:minHeight="60dp"
         android:id="@+id/layoutInput">
 
         <RatingBar
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:id="@+id/ratingSingle"
             android:layout_gravity="center_horizontal"
             android:numStars="5"
-            android:visibility="gone" />
+            android:visibility="gone"
+            style="@style/smallRatingBar" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -118,15 +118,16 @@
 
         <RatingBar
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:id="@+id/ratingDouble"
             android:layout_gravity="center_horizontal"
             android:numStars="5"
-            android:visibility="gone" />
+            android:visibility="gone"
+            style="@style/smallRatingBar" />
 
         <Spinner
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:id="@+id/spinSelectSingle"
             android:layout_gravity="center_horizontal"
             android:visibility="gone"
@@ -134,7 +135,7 @@
 
         <Spinner
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:id="@+id/spinSelectMultiple"
             android:layout_gravity="center_horizontal"
             android:visibility="gone"
@@ -147,12 +148,12 @@
         style="?android:attr/buttonBarStyle"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="false"
         android:layout_alignParentEnd="false"
-        android:layout_alignParentBottom="false"
         android:id="@+id/linearLayout4"
-        android:layout_below="@+id/layoutInput" >
+        android:layout_below="@+id/layoutInput"
+        android:layout_alignParentBottom="false">
 
         <Button
             style="?android:attr/buttonBarButtonStyle"
