--- a/app/src/main/res/layout/activity_create_playlist.xml
+++ b/app/src/main/res/layout/activity_create_playlist.xml
@@ -1,9 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     tools:context="com.kwohlford.smartplaylistmanager.playlist.CreatePlaylistActivity">
 
     <RelativeLayout
@@ -70,7 +73,8 @@
             android:layout_height="wrap_content"
             android:text="@string/button_cancelchanges"
             android:id="@+id/button"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="closeCancel" />
 
         <Button
             style="?android:attr/buttonBarButtonStyle"
@@ -78,7 +82,8 @@
             android:layout_height="wrap_content"
             android:text="@string/button_continue"
             android:id="@+id/button2"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="closeContinue" />
     </LinearLayout>
 
 </RelativeLayout>
