--- a/app/src/main/res/layout/criteria_list_item.xml
+++ b/app/src/main/res/layout/criteria_list_item.xml
@@ -8,9 +8,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/imageView5"
-        android:src="@drawable/tag_outline"
-        android:contentDescription="@string/desc_tag" />
+        android:id="@+id/imgInclExcl"
+        android:src="@drawable/playlist_plus"
+        android:contentDescription="@string/desc_includeexclude" />
 
     <Space
         android:layout_width="5dp"
@@ -22,25 +22,25 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/placeholder_tagname"
-        android:id="@+id/txtTagName"
+        android:text="@string/placeholder_filter"
+        android:id="@+id/txtFilterDesc"
         android:gravity="center_vertical" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/imgEditTag"
+        android:id="@+id/imgEditFilter"
         android:src="@drawable/edit_outline"
-        android:contentDescription="@string/desc_edittag"
+        android:contentDescription="@string/desc_editfilter"
         android:clickable="true"
-        android:onClick="editTag" />
+        android:onClick="editFilter" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/imgDeleteTag"
+        android:id="@+id/imgDeleteFilter"
         android:src="@drawable/x_box"
-        android:contentDescription="@string/desc_deletetag"
-        android:onClick="deleteTag" />
+        android:contentDescription="@string/desc_deletefilter"
+        android:onClick="deleteFilter" />
 
 </LinearLayout>
