--- a/app/src/main/res/layout/track_list_item_expanded.xml
+++ b/app/src/main/res/layout/track_list_item_expanded.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="296dp"
-    android:padding="6dp"
+    android:layout_height="230dp"
     android:id="@+id/ll"
     android:clickable="true"
     android:onClick="toggleExpandCard"
@@ -13,7 +12,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="220dp"
         android:id="@+id/cv"
         >
 
@@ -23,8 +22,8 @@
             >
 
             <ImageView
-                android:layout_height="108dp"
-                android:layout_width="108dp"
+                android:layout_height="70dp"
+                android:layout_width="70dp"
                 android:id="@+id/album_thumbnail"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -34,16 +33,16 @@
                 />
 
             <ImageView
-                android:layout_width="54dp"
-                android:layout_height="108dp"
+                android:layout_width="35dp"
+                android:layout_height="70dp"
                 android:id="@+id/playback_button"
-                android:layout_alignParentEnd="true"
+                android:layout_alignParentEnd="false"
                 android:layout_alignParentTop="true"
                 android:src="@drawable/play_circle"
                 android:contentDescription="@string/desc_playpreview"
                 android:clickable="true"
                 android:onClick="togglePlaybackPreview"
-                />
+                android:layout_toStartOf="@+id/imgArrow" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,7 +50,7 @@
                 android:id="@+id/song_title"
                 android:layout_toEndOf="@+id/album_thumbnail"
                 android:layout_alignParentTop="true"
-                android:textSize="20sp"
+                android:textSize="15dp"
                 tools:ignore="RelativeOverlap"
                 android:text="@string/placeholder_songtitle"
                 />
@@ -62,6 +61,7 @@
                 android:id="@+id/artist"
                 android:layout_toEndOf="@+id/album_thumbnail"
                 android:layout_below="@+id/song_title"
+                android:textSize="10dp"
                 android:text="@string/placeholder_artist"
                 />
 
@@ -71,6 +71,7 @@
                 android:id="@+id/album_name"
                 android:layout_toEndOf="@+id/album_thumbnail"
                 android:layout_below="@+id/artist"
+                android:textSize="10dp"
                 android:text="@string/placeholder_album"
                 />
 
@@ -82,8 +83,8 @@
                 android:layout_alignParentStart="true" />
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:id="@+id/imgTag"
                 android:layout_below="@+id/spacer1"
                 android:layout_alignParentStart="true"
@@ -94,7 +95,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/placeholder_taglist"
                 android:id="@+id/genreTags"
@@ -102,11 +103,12 @@
                 android:layout_toEndOf="@+id/imgTag"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:textSize="13dp"
                 />
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/placeholder_taglist"
                 android:id="@+id/moodTags"
@@ -115,6 +117,7 @@
                 android:layout_above="@+id/songRating"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:textSize="13dp"
                 />
 
             <RatingBar
@@ -124,20 +127,16 @@
                 android:numStars="5"
                 android:layout_below="@+id/imgTag"
                 android:layout_centerHorizontal="true"
-                />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_below="@+id/songRating"
-                android:id="@+id/space" />
+                style="@style/smallRatingBar" />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/space"
-                android:layout_alignParentStart="true">
+                android:layout_height="50dp"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/songRating">
 
                 <Button
                     android:layout_width="0dp"
@@ -163,6 +162,15 @@
                     android:clickable="true"
                     android:onClick="openMoodDialog" />
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="70dp"
+                android:id="@+id/imgArrow"
+                android:src="@drawable/chevron_right"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_above="@+id/spacer1" />
 
         </RelativeLayout>
 
